# bbauv

./: .gitignore  .hgignore  .netrc  .project  .pydevproject  CMakeLists.txt  controlParams.txt  controls_060114.txt  controls_060114.txt~  controls_070114.txt  controls_070114.txt~  dvlcap  front_cam_guvcprofile.gpfl  run_tmux.sh
Conflict testing/: Goh Eng Wei's AUV Intelligence.docx
DSAAV/DSAAV_lib/: README
DepthCtrlExperiment20120912/: 20kHzPWMDutyCycleGen.vi  CurrLim_AmpsToInt.vi  CurrSetPt&DriveDirConverter.vi  Current Loop 9505 (FPGA).vi  Current Loop 9505 (RT).vi  Current_Setpt_DriDir_Handler.vi  DepthCtrlExperiment20120912.aliases  DepthCtrlExperiment20120912.lvlps  DepthCtrlExperiment20120912.lvproj  FbackCurr_IntToAmmps.vi  US300 Depth Sensor Driver Scan Interface.vi  US300 Depth Sensor Driver.vi  US300DepthDriver.vi  Untitled Library 1.lvlib
DepthCtrlExperiment20120912/FPGA Bitfiles/: DepthCtrlExperim_FPGATarget_CurrentLoop9505(_EF930710.lvbitx
DepthCtrlExperiment20120912/Temp Backups/: Current Loop 9505 (FPGA) - aft CombSampCurrLoop_bef CombPWMGenLoop.vi  Current Loop 9505 (FPGA) - bef combining sample current loops.vi
Mech Design/: BOM.xlsx  Results Data Table.xlsx
MissionPlans/: readme.txt  sauvc.txt
OLD_SOFTWARE_CODES/: readme.txt
OLD_SOFTWARE_CODES/Openups/: mainpage.dox  manifest.xml  openups.launch
OLD_SOFTWARE_CODES/Scripts/: cleanit.sh
OLD_SOFTWARE_CODES/imu_old/: IMU_node.cpp.old  criteria_limited_coutput  turtle
OLD_SOFTWARE_CODES/launch/: audible_notifier.launch  bumblebee.launch  bumblebee_right.yaml  controller.launch  firefly_nodelet.launch  manifest.xml  robot_pose_ekf.launch  sensors.launch  teleop.launch
Scripts/: CameraCalibration.sh  InstallAliases.sh  InstallQTTools  InstallQTTools.sh  InstallRosHydro.sh  InstallUWSim.sh  LocalDNSMap.sh  README.txt  RecordVision.sh  RunUWSim.sh  SSH.sh  SetAutoSource.sh  Setup12.04.sh  SetupCatkinWorkspace.sh  SourceInstallSetupBash.sh  auv.sh  auv_lynnette.sh  cleanit.sh  cleanit.sh.orig  compress.sh  ics  lynnette_repub.sh  recordbag.sh  ros_bash_aliases  sensors.sh  testBags.sh  thien_repub.sh
Scripts/old_scripts/: cleanit.sh  remote.sh
arduino/Schematics/: bbauv_mega.sch
arduino_bbauv2012/: thruster_arduino.java
arduino_bbauv2012/PID_combine_output/: PID_combine_output.ino
arduino_bbauv2012/arduino_libraries/: update_arduino_libraries.sh
arduino_bbauv2012/stablizing/: stablizing.ino
bbauv2012_ros/launch/: joycontrol.launch  plslauncheverything.launch  sensors.launch
bbauvSoftware/: required packages  setup.sh  setup_host.bash
bbauvSoftware/Vision/: CMakeLists.txt  Vision.launch  mainpage.dox  manifest.xml
bbauvSoftware/bbauv_msgs/: mainpage.dox  manifest.xml
bbauvSoftware/dataCollector/: CMakeLists.txt  manifest.xml
bbauvSoftware/launch/: joycontrol.launch  sensors.launch
bbauv_sbRIO-9612/: C2_controltower.vi  C2_depth.vi  C2_yaw.vi  FPGA_9505_Thruster_Current_Loop.vi  Readme.txt  Sentuator_OS5000US.vi  Test.vi  bbauv_sbRIO.aliases  bbauv_sbRIO.lvlps  bbauv_sbRIO.lvproj
bbauv_sbRIO-9612/FPGA Bitfiles/: bbauvsbRIO_FPGATarget_FPGA9505Thruster_MQ4m4FR0DNg.lvbitx
clan/: Thruster Ratio - RPM - Speed Input Table - Dry Test.ods  check_device.sh  update_arduino_libraries.sh
clan/bbauv_sbRIO-9612/: C2_controltower.vi  (+6 more)
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
labview_bbauv2012/: bbauv_sbRIO.aliases  bbauv_sbRIO.lvlps  bbauv_sbRIO.lvproj
launch/: SpartonCompass.launch  WH_DVL_launch.launch  export_jpeg.launch  manual.launch  uncompressbags.launch
nut-bb/: Makefile.in  aclocal.m4  bbconfig.sh  configure
paper/: paper.tex
ros_bbauv2012/Logic/stereo_vision_bbauv/: CMakeLists.txt
ros_bbauv2012/Logic/stereo_vision_bbauv/src/: pcl_process.h
ros_bbauv2012/Logic/stereo_vision_bbauv/srv/: roiDist.srv
sbc_config/: 52-firefly.rules  52-nut-usbups.rules  53-bumblebee.rules  README  startup-trigger-ups.sh  ups.conf  usbhid-ups
sbrio_bbauv2012/: bbauv_sbRIO.lvlps  bbauv_sbRIO.lvproj
scripts/: LocalDNSMap.sh  SetupSSH.sh  auv.sh  auv_lynnette.sh  ros_bash_aliases  rosserial.sh
src/: CMakeLists.txt  pynotify_fix_osx.patch  readme.txt
src/core/: CMakeLists.txt  package.xml  readme.txt
src/core/cfg/: mission_planner.cfg
src/core/include/: missionstates.h
src/core/msg/: missionPlanStamped.msg  plan.msg  task.msg
src/core/scripts/: main.py  mission_planner.py  test.py
src/core/scripts/States/: Buoy.py  Gate.py  Lane.py  Qualifier.py  SAUVCAcoustics.py  SAUVCBucket.py  SAUVCFlare.py  SAUVCFlare_copy.py  SAUVCInitial.py  SAUVCLinefollower.py  SAUVCQualifier.py  TestNavigation.py
src/core/src/: core_node.cpp  missionstates.cpp  server.py  test.py  timer.cpp
src/core/src/states/: gate.py  init.py
src/core/src/utils/: common.py
src/sensordri/: CMakeLists.txt  imu_nodelet.xml  package.xml
src/sensordri/include/imu/: imu.h
src/sensordri/include/test/: node.h
src/sensordri/launch/: imu.xml
src/sensordri/lib/: libserial.dylib
src/sensordri/src/imu/: node.cpp
src/sensors/cpu_mon/: CMakeLists.txt  package.xml
src/sensors/cpu_mon/src/: main.cpp
src/sensors/explorer_dvl/: CMakeLists.txt  explorer_dvl_nodelet.xml  package.xml
src/sensors/explorer_dvl/cfg/: earth_odom.cfg
src/sensors/explorer_dvl/include/: explorer_serial.h
src/sensors/explorer_dvl/launch/: dvl.launch
src/sensors/explorer_dvl/scripts/: beamtoxyz.py  earth_odom.py  kalman.py  tilt.py  veltodistance.py
src/sensors/explorer_dvl/src/: node.cpp
src/sensors/explorer_dvl/tests/: loopback  loopback.ino  rdi_binary_second  rdi_dvl_binary  rdi_dvl_sideways_capture  test.cpp
src/sensors/sensors/: CMakeLists.txt  package.xml
src/sensors/sparton_imu/: CMakeLists.txt  package.xml  sparton_nodelet.xml
src/sensors/sparton_imu/cpu_use_analysis.trace/Trace1.run/: 4C48231D-3012-454B-8C3F-014FEF176501-sampler.data
src/sensors/sparton_imu/cpu_use_analysis.trace/Trace2.run/: 4C48231D-3012-454B-8C3F-014FEF176501-sampler.data
src/sensors/sparton_imu/include/: sparton_serial.h
src/sensors/sparton_imu/launch/: imu.launch
src/sensors/sparton_imu/src/: node.cpp
(+1195 files in other folders)
